client/theme/css/themes/carbon-gray10.css
/* color variables */
body[kui-theme="IBM Light"] {
  --color-base00: #ffffff;
  --color-base01: #f3f3f3;
  --color-base02: #8c8c8c;
  --color-base03: #dcdcdc;
  --color-base04: #f2f4f8;
  --color-base05: #50565b;
  --color-base06: #171717;
  --color-base07: #fff;
  --color-base08: #da1e28;
  --color-base09: #bf5b17;
  --color-base0A: #8e6926;
  --color-base0B: #198038;
  --color-base0C: #0072c3;
  --color-base0D: #054ada;
  --color-base0E: #d12765;
  --color-base0F: #8a3ffc;

  /* SidecarThin */
  --color-background-inverted01: var(--color-sidecar-background);
  --color-background-inverted02: var(--color-sidecar-header);
  --color-text-inverted01: #fff;
  --color-text-inverted02: var(--color-text-inverted01);
  --color-text-inverted03: var(--color-text-01);
  --color-tab-selected-inverted: var(--color-name);

  --color-brand-01: #0062ff;
  --color-brand-02: #171717;
  --color-brand-03: #0062ff;

  --color-ui-05: #171717;
  --color-ui-03: var(--color-background-inverted02);
  --color-text-02: #565656;

  --color-map-key: #6ea6ff;
  --color-map-value: var(--color-text-inverted01);

  --color-table-border1: #9e9fa1;
  --color-table-border2: #3d4144;
  --color-table-border3: #a5adb4;

  --color-sidecar-toolbar-background: #bebebe;
  --color-sidecar-toolbar-foreground: var(--color-text-01);

  --color-sidecar-header: #282828;
  --color-sidecar-background: var(--color-base06);
  --color-sidecar-border: #e4e4e4;

  --color-brand-03: #008fff;
  --color-content-divider: #bfc0c2;
  --color-selection-background: #b3e6ff;

  --color-screenshot-background: #0062ff;

  --color-stripe-01: #f5f7fa;
  --color-stripe-02: var(--color-base03);
  --tab-gray-text-color: var(--color-text-01);
  --active-tab-color: #0062ff;

  --color-light-red: hsla(354, 81%, 51%, 50%);
  --color-light-green: hsla(143, 73%, 43%, 50%);
  --color-light-yellow: hsla(46, 99%, 59%, 50%);
}

body[kui-theme="IBM Light"] sidecar .sidecar-header {
  border-bottom-color: #4c4c4c;
}

body[kui-theme="IBM Light"] .result-table-title-outer {
  background-color: transparent;
}
body[kui-theme="IBM Light"] sidecar .bx--data-table-header__title {
  color: var(--color-base07);
}

body[kui-theme="IBM Light"] sidecar,
body[kui-theme="IBM Light"] sidecar .sidecar-bottom-stripe,
body[kui-theme="IBM Light"] sidecar .monaco-editor,
body[kui-theme="IBM Light"] sidecar .monaco-editor .mtk5,
body[kui-theme="IBM Light"]
  sidecar
  .bx--tabs__nav-item--selected:not(.bx--tabs__nav-item--disabled)
  .bx--tabs__nav-link {
  color: var(--color-base07);
}
body[kui-theme="IBM Light"]
  sidecar
  .bx--tabs__nav-item--selected:not(.bx--tabs__nav-item--disabled)
  .bx--tabs__nav-link {
  border-bottom-color: var(--color-map-key);
}
body[kui-theme="IBM Light"]
  sidecar
  .bx--tabs__nav-item:hover:not(.bx--tabs__nav-item--selected):not(.bx--tabs__nav-item--disabled)
  .bx--tabs__nav-link {
  color: var(--color-base01);
}

body[kui-theme="IBM Light"] sidecar .sidecar-bottom-stripe svg path {
  fill: var(--color-base07);
}
body[kui-theme="IBM Light"] sidecar a.bx--tabs__nav-link,
body[kui-theme="IBM Light"] sidecar .sidecar-bottom-stripe {
  background-color: var(--color-sidecar-header);
  border-bottom-color: #6f6f6f;
  color: var(--color-sidecar-toolbar-background);
}
body[kui-theme="IBM Light"] .monaco-editor .margin-view-overlays .current-line-margin,
body[kui-theme="IBM Light"] .monaco-editor .view-overlays .current-line {
  border-color: #565656;
}
body[kui-theme="IBM Light"] sidecar .sidecar-header-secondary-content,
body[kui-theme="IBM Light"] sidecar .monaco-editor .mtk7,
body[kui-theme="IBM Light"] sidecar .monaco-editor .line-numbers {
  color: var(--color-sidecar-toolbar-background);
}
body[kui-theme="IBM Light"] .monaco-editor .current-line ~ .line-numbers {
  color: #fa75a6;
}
body[kui-theme="IBM Light"] .kui--input-stripe .repl-input {
  background-color: var(--color-base04);
}
body[kui-theme="IBM Light"] .repl {
  background-color: var(--color-base01);
}
body[kui-theme="IBM Light"] .kui--input-stripe {
  background-color: var(--color-base00);
}
body[kui-theme="IBM Light"] .kui--input-stripe input {
  background-color: var(--color-base01);
}

body[kui-theme="IBM Light"] .bx--data-table {
  font-family: var(--font-sans-serif);
}
body[kui-theme="IBM Light"] .bx--data-table td {
  background-color: var(--color-base00);
}

/* mono-blue hightlightjs theme */
.hljs {
  display: block;
  overflow-x: auto;
  padding: 0.5em;
  background: #eaeef3;
}
.hljs {
  color: #00193a;
}
.hljs-keyword,
.hljs-selector-tag,
.hljs-title,
.hljs-section,
.hljs-doctag,
.hljs-name,
.hljs-strong {
  font-weight: bold;
}
.hljs-comment {
  color: #738191;
}
.hljs-string,
.hljs-title,
.hljs-section,
.hljs-built_in,
.hljs-literal,
.hljs-params,
.hljs-type,
.hljs-addition,
.hljs-tag,
.hljs-quote,
.hljs-name,
.hljs-selector-id,
.hljs-selector-class {
  color: #0048ab;
}
.hljs-meta,
.hljs-subst,
.hljs-symbol,
.hljs-regexp,
.hljs-attribute,
.hljs-deletion,
.hljs-variable,
.hljs-template-variable,
.hljs-link,
.hljs-bullet {
  color: #4c81c9;
}
.hljs-emphasis {
  font-style: italic;
}

